fix design issue
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-to-google-merchant-center/trunk@1122040 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/wogo.css
+++ b/assets/css/wogo.css
@@ -32,8 +32,12 @@
 .wogo-form .description {
 	margin-left: 24%;
 }
-.wogo-form input[type="submit"], .wogo-form input[type="checkbox"] {
+.wogo-form input[type="submit"] {
 	width: auto;
+}
+.wogo-form input[type="checkbox"] {
+	width: 14px;
+	height: 14px;
 }
 .wogo-form input[type="submit"] {
 	float: none;
@@ -55,7 +59,7 @@
 	background: #2ea2cc;
     color: #fff;
     height: 16px;
-    margin-left: -16px;
+	left: 52.8%;
     position: absolute;
     text-align: center;
     top: 2px;
