--- a/assets/css/wogo.css
+++ b/assets/css/wogo.css
@@ -69,7 +69,7 @@
 	background: #2ea2cc;
     color: #fff;
     height: 16px;
-    margin-left: -30px;
+    left: 51.5%;
     position: absolute;
     text-align: center;
     top: 2px;
